--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,31 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-
+    compileSdkVersion 29
+    buildToolsVersion "29.0.1"
     defaultConfig {
-        android.defaultConfig.vectorDrawables.useSupportLibrary = true
-        applicationId "ru.bartex.p010_train"
-        minSdkVersion 15
-        targetSdkVersion 26
+        applicationId "com.geekbrains.a1l1_helloworld"
+        minSdkVersion 19
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testCompile 'junit:junit:4.12'
-    compile 'androidx.appcompat:appcompat:1.0.0'
-    compile 'com.google.android.material:material:1.0.0'
-    compile 'androidx.legacy:legacy-support-v4:1.0.0'
+    android.defaultConfig.vectorDrawables.useSupportLibrary = true
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    testImplementation 'junit:junit:4.12'
 }
